external-crates/move/crates/move-compiler/tests/move_check/typing/signed_int_feature_gated.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/signed_int_feature_gated.move:7:17
  │
7 │         let _a: i8 = 0;
  │                 ^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/signed_int_feature_gated.move:8:17
  │
8 │         let _b: i16 = 0;
  │                 ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/signed_int_feature_gated.move:9:17
  │
9 │         let _c: i32 = 0;
  │                 ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:10:17
   │
10 │         let _d: i64 = 0;
   │                 ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:11:17
   │
11 │         let _e: i128 = 0;
   │                 ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:12:17
   │
12 │         let _f: i256 = 0;
   │                 ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:16:18
   │
16 │         let _a = 1i8;
   │                  ^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:17:18
   │
17 │         let _b = 1i16;
   │                  ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:18:18
   │
18 │         let _c = 1i32;
   │                  ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:19:18
   │
19 │         let _d = 1i64;
   │                  ^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:20:18
   │
20 │         let _e = 1i128;
   │                  ^^^^^ signed integer types are under development and should not be used right now.

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/typing/signed_int_feature_gated.move:21:18
   │
21 │         let _f = 1i256;
   │                  ^^^^^ signed integer types are under development and should not be used right now.
